--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "react-markdown": "9.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/js-yaml": "^4.0.7"
   }
 }
