--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.4",
     "js-yaml": "4.1.0",
-    "next": "^13.5.4",
+    "next": "13.4",
     "next-yaml": "1.0.1",
     "postcss": "8.4.31",
     "raw-loader": "4.0.2",
