--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pixi/filter-kawase-blur": "^5.1.1",
     "@tailwindcss/typography": "0.5.10",
     "@types/node": "20.8.2",
     "@types/react": "18.2.25",
@@ -17,14 +18,21 @@
     "daisyui": "3.9.2",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.4",
+    "hsl-to-hex": "^1.0.0",
     "js-yaml": "4.1.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "next": "13.4",
     "next-yaml": "1.0.1",
+    "pixi.js": "^7.4.0",
     "postcss": "8.4.31",
     "raw-loader": "4.0.2",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.8.1",
     "react-markdown": "9.0.0",
+    "simplex-noise": "^4.0.1",
     "styled-jsx": "^5.1.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
