--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
     "autoprefixer": "10.4.16",
     "daisyui": "3.9.2",
     "eslint": "8.50.0",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "^14.1.4",
     "hsl-to-hex": "^1.0.0",
     "js-yaml": "4.1.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
-    "next": "13.5.2",
+    "next": "^14.1.4",
     "next-yaml": "1.0.1",
     "pixi.js": "^7.4.0",
     "postcss": "8.4.31",
     "raw-loader": "4.0.2",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.8.1",
     "react-markdown": "9.0.0",
     "simplex-noise": "^4.0.1",
